# check_os_ver

./: README.md  pyproject.toml
src/check_os_ver/: hi.py  osver.py  random-game.py
tests/: test_first.py
